--- a/sasa-tools/package.json
+++ b/sasa-tools/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react95/core": "^9.6.0",
+    "@react95/icons": "^2.2.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-draggable": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
